added text to index

--- a/index.html
+++ b/index.html
@@ -7,6 +7,44 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header><h1>Music Genres</h1></header>
+
+<h2>Introduction</h2>
+<p>A music genre is a conventional category that identifies some pieces of music as belonging to a shared tradition or set of conventions.</p>
+
+<h2>Genres</h2>
+<h3>Art Music</h3>
+<p>Some text here...</p>
+
+<h3>Popular Music</h3>
+<p>Some text here...</p>
+
+<h4>Country</h4>
+<p>Some text here...</p>
+<h4>Electronic</h4>
+<p>Some text here...</p>
+<h4>Funk</h4>
+<p>Some text here...</p>
+<h4>Hip hop</h4>
+<p>Some text here...</p>
+<h4>Jazz</h4>
+<p>Some text here...</p>
+<h4>Latin</h4>
+<p>Some text here...</p>
+<h4>Pop</h4>
+<p>Some text here...</p>
+<h4>Punk</h4>
+<p>Some text here...</p>
+<h4>Reggae</h4>
+<p>Some text here...</p>
+<h4>Rock</h4>
+<p>Some text here...</p>
+<h4>Metal</h4>
+<p>Some text here...</p>
+<h4>Soul and R&ampB</h4>
+<p>Some text here...</p>
+<h4>Polka</h4>
+<p>Some text here...</p>
+
 </body>
 </html>
