added elements to index

--- a/index.html
+++ b/index.html
@@ -4,47 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Test</title>
 </head>
-<body>
-    <header><h1>Music Genres</h1></header>
+<body> <style>
+    body {
+      background-image: url('https://i.ibb.co/xsTNFjH/pexels-lopsan-2191013-2.jpg');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+    }
+    </style>
+    <h1 style="text-align:center;color:rgb(217, 237, 238);">Music Genres</h1>
 
-<h2>Introduction</h2>
-<p>A music genre is a conventional category that identifies some pieces of music as belonging to a shared tradition or set of conventions.</p>
+<h2 style="background-color:rgb(126, 219, 231);">Introduction</h2>
+<p style="font-family:georgia;color:rgb(217, 237, 238)">A music genre is a conventional category that identifies some pieces of music as belonging to a shared tradition or set of conventions.</p>
 
-<h2>Genres</h2>
-<h3>Art Music</h3>
-<p>Some text here...</p>
+<h2 style="background-color:rgb(126, 219, 231);">Genres</h2>
+<h3 style="background-color:rgb(188, 231, 238);">Art Music</h3>
+<p style="font-family:georgia;color:rgb(217, 237, 238)">Some text here...</p>
 
-<h3>Popular Music</h3>
-<p>Some text here...</p>
+<h3 style="background-color:rgb(188, 231, 238);">Popular Music</h3>
+<p style="font-family:georgia;color:rgb(217, 237, 238)">Some text here...</p>
 
-<h4>Country</h4>
-<p>Some text here...</p>
-<h4>Electronic</h4>
-<p>Some text here...</p>
-<h4>Funk</h4>
-<p>Some text here...</p>
-<h4>Hip hop</h4>
-<p>Some text here...</p>
-<h4>Jazz</h4>
-<p>Some text here...</p>
-<h4>Latin</h4>
-<p>Some text here...</p>
-<h4>Pop</h4>
-<p>Some text here...</p>
-<h4>Punk</h4>
-<p>Some text here...</p>
-<h4>Reggae</h4>
-<p>Some text here...</p>
-<h4>Rock</h4>
-<p>Some text here...</p>
-<h4>Metal</h4>
-<p>Some text here...</p>
-<h4>Soul and R&ampB</h4>
-<p>Some text here...</p>
-<h4>Polka</h4>
-<p>Some text here...</p>
+<h4 style="background-color:rgb(224, 239, 241)">Country</h4>
+<p style="font-family:georgia;color:rgb(217, 237, 238)">Some text here...</p>
+<h4 style="background-color:rgb(224, 239, 241)">Electronic</h4>
+<p style="font-family:georgia;color:rgb(217, 237, 238)">Some text here...</p>
+<h4 style="background-color:rgb(224, 239, 241)">Funk</h4>
+<p style="font-family:georgia;color:rgb(217, 237, 238)">Some text here...</p>
+<h4 style="background-color:rgb(224, 239, 241)">Hip hop</h4>
+<p style="font-family:georgia;color:rgb(217, 237, 238)">Some text here...</p>
+<h4 style="background-color:rgb(224, 239, 241)">Jazz</h4>
+<p style="font-family:georgia;color:rgb(217, 237, 238)">Some text here...</p>
+<h4 style="background-color:rgb(224, 239, 241)">Latin</h4>
+<p style="font-family:georgia;color:rgb(217, 237, 238)">Some text here...</p>
+<h4 style="background-color:rgb(224, 239, 241)">Pop</h4>
+<p style="font-family:georgia;color:rgb(217, 237, 238)">Some text here...</p>
+<h4 style="background-color:rgb(224, 239, 241)">Punk</h4>
+<p style="font-family:georgia;color:rgb(217, 237, 238)">Some text here...</p>
+<h4 style="background-color:rgb(224, 239, 241)">Reggae</h4>
+<p style="font-family:georgia;color:rgb(217, 237, 238)">Some text here...</p>
+<h4 style="background-color:rgb(224, 239, 241)">Rock</h4>
+<p style="font-family:georgia;color:rgb(217, 237, 238)">Some text here...</p>
+<h4 style="background-color:rgb(224, 239, 241)">Metal</h4>
+<p style="font-family:georgia;color:rgb(217, 237, 238)">Some text here...</p>
+<h4 style="background-color:rgb(224, 239, 241)">Soul and R&ampB</h4>
+<p style="font-family:georgia;color:rgb(217, 237, 238)">Some text here...</p>
+<h4 style="background-color:rgb(224, 239, 241)">Polka</h4>
+<p style="font-family:georgia;color:rgb(217, 237, 238)">Some text here...</p>
 
 </body>
 </html>
